Add deleteMany and refactor code
